--- a/index.html
+++ b/index.html
@@ -4,14 +4,117 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <script src="scripts.js"></script>
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <script type="module" src="js/components/nav/hamburgermenu.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <title>Nexus</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
   <body>
-    <header></header>
+    <header class="flex items-center justify-between px-6 py-4 w-full">
+      <a href="index.html">
+        <img src="images/nexus.svg" class="h-12" />
+      </a>
+      <nav
+        role="navigation"
+        class="hidden nav-header nav-header-hamburger gap-10"
+      >
+        <a href="auctions.html">auctions</a>
+        <a href="about.html">about</a>
+        <a href="login.html">login</a>
+        <a href="contact.html">logout</a>
+        <a href="profile">profile</a>
+      </nav>
+      <button
+        id="hamburger-btn"
+        class="md:hidden text-2xl ml-4 focus:outline-none"
+      >
+        ☰
+      </button>
+    </header>
+
     <main>
-      <h1 class="font-bold text-white">Welcome to Nexus</h1>
+      <h1 class="font-bold">Welcome to Nexus</h1>
+      <section class="m-12 grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+        <h2 class="col-span-full">Auctions in progress</h2>
+        <!-- Item 1 -->
+        <div class="grid mb-10">
+          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+            <div class="">
+              <img
+                src="images/canis.jpg"
+                alt="Dog figurine"
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div class="p-4 grid grid-cols-2 font-extralight">
+              <div class="border-r">
+                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
+                <p class="text-gray-600">Alistair Vennholm</p>
+              </div>
+              <div class="grid justify-items-end">
+                <p class="text-sm">Current price</p>
+                <p class="text-2xl">$123</p>
+                <p class="text-sm font-semibold text-gray-300">2 days left</p>
+              </div>
+              <button class="border col-span-full mt-10">Bid</button>
+            </div>
+          </div>
+        </div>
+        <!-- Item 2 -->
+        <div class="grid mb-10">
+          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+            <div class="">
+              <img
+                src="images/canis.jpg"
+                alt="Dog figurine"
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div class="p-4 grid grid-cols-2 font-extralight">
+              <div class="border-r">
+                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
+                <p class="text-gray-600">Alistair Vennholm</p>
+              </div>
+              <div class="grid justify-items-end">
+                <p class="text-sm">Current price</p>
+                <p class="text-2xl">$123</p>
+                <p class="text-sm font-semibold text-gray-300">2 days left</p>
+              </div>
+              <button class="border col-span-full mt-10">Bid</button>
+            </div>
+          </div>
+        </div>
+        <!-- Item 3 -->
+        <div class="grid mb-10">
+          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+            <div class="">
+              <img
+                src="images/canis.jpg"
+                alt="Dog figurine"
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div class="p-4 grid grid-cols-2 font-extralight">
+              <div class="border-r">
+                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
+                <p class="text-gray-600">Alistair Vennholm</p>
+              </div>
+              <div class="grid justify-items-end">
+                <p class="text-sm">Current price</p>
+                <p class="text-2xl">$123</p>
+                <p class="text-sm font-semibold text-gray-300">2 days left</p>
+              </div>
+              <button class="border col-span-full mt-10">Bid</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
