Working with front page, trying subgrid

--- a/index.html
+++ b/index.html
@@ -115,6 +115,58 @@
           </div>
         </div>
       </section>
+      <section class="m-12 grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+        <h2 class="col-span-full">Categories</h2>
+        <!-- Item 1 -->
+        <h3 class="text-3xl col-span-full">Art</h3>
+        <div class="grid grid-cols-subgrid mb-10">
+          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+            <div class="">
+              <img
+                src="images/Firefly an abandoned street at night in a small french town 19th century town, a coated figure stand.jpg"
+                alt="an abandoned street at night in a small french town 19th century town, a coated figure stand"
+                class="w-full h-60 object-cover"
+              />
+            </div>
+            <div class="p-4 grid grid-cols-2 font-extralight">
+              <div class="border-r">
+                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
+                <p class="text-gray-600">Alistair Vennholm</p>
+              </div>
+              <div class="grid justify-items-end">
+                <p class="text-sm">Current price</p>
+                <p class="text-2xl">$123</p>
+                <p class="text-sm font-semibold text-gray-300">2 days left</p>
+              </div>
+              <button class="border col-span-full mt-10">Bid</button>
+            </div>
+          </div>
+        </div>
+        <!-- Item 2 -->
+        <div class="grid grid-cols-subgrid mb-10">
+          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+            <div class="">
+              <img
+                src="images/canis.jpg"
+                alt="Dog figurine"
+                class="w-full h-60 object-cover"
+              />
+            </div>
+            <div class="p-4 grid grid-cols-2 font-extralight">
+              <div class="border-r">
+                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
+                <p class="text-gray-600">Alistair Vennholm</p>
+              </div>
+              <div class="grid justify-items-end">
+                <p class="text-sm">Current price</p>
+                <p class="text-2xl">$123</p>
+                <p class="text-sm font-semibold text-gray-300">2 days left</p>
+              </div>
+              <button class="border col-span-full mt-10">Bid</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
