made profilepage-html and css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="about.html">about</a>
         <a href="login.html">login</a>
         <a href="contact.html">logout</a>
-        <a href="profile">profile</a>
+        <a href="profile.html">profile</a>
       </nav>
       <button
         id="hamburger-btn"
@@ -62,7 +62,7 @@
         <h2 class="col-span-full">Auctions in progress</h2>
         <!-- Item 1 -->
         <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+          <div class="cards rounded-md overflow-hidden">
             <div class="">
               <img
                 src="images/canis.jpg"
@@ -86,7 +86,7 @@
         </div>
         <!-- Item 2 -->
         <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+          <div class="grid cards rounded-md overflow-hidden">
             <div class="">
               <img
                 src="images/canis.jpg"
@@ -110,7 +110,7 @@
         </div>
         <!-- Item 3 -->
         <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+          <div class="grid cards rounded-md overflow-hidden">
             <div class="">
               <img
                 src="images/canis.jpg"
@@ -139,7 +139,7 @@
         <h2 class="col-span-full">Upcoming auctions</h2>
         <!-- Item 1 -->
         <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+          <div class="grid cards rounded-md overflow-hidden">
             <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
               <img
                 src="images/clockowl.jpg"
@@ -163,7 +163,7 @@
         </div>
         <!-- Item 2 -->
         <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+          <div class="grid cards rounded-md overflow-hidden">
             <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
               <img
                 src="images/canis.jpg"
@@ -187,7 +187,7 @@
         </div>
         <!-- Item 3 -->
         <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+          <div class="grid cards rounded-md overflow-hidden">
             <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
               <img
                 src="images/Firefly an abandoned street at night in a small french town 19th century town, a coated figure stand.jpg"
@@ -218,7 +218,7 @@
 
         <div class="grid mb-10">
           <h3 class="text-3xl col-span-full">Art</h3>
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+          <div class="grid cards rounded-md overflow-hidden">
             <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
               <img
                 src="images/Firefly an abandoned street at night in a small french town 19th century town, a coated figure stand.jpg"
@@ -246,7 +246,7 @@
 
         <div class="grid mb-10">
           <h3 class="text-3xl">Clocks</h3>
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
+          <div class="grid cards rounded-md overflow-hidden">
             <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
               <img
                 src="images/Firefly Fancy swiss clock with steel chain; 86681.jpg"
