--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
         <a href="about.html">about</a>
         <a href="login.html">login</a>
         <a href="contact.html">logout</a>
-        <a href="profile">profile</a>
+        <a href="profile.html">profile</a>
       </nav>
       <button
         id="hamburger-btn"
@@ -41,10 +41,9 @@
 
     <main class="flex justify-center items-center min-h-[calc(100vh-180px)]">
       <div class="max-w-md w-full border border-gray-200 rounded-md p-8 m-4">
-        <h2 class="text-2xl font-semibold text-center mb-6">
+        <h1 class="text-2xl font-semibold text-center mb-6">
           Create an Account
-        </h2>
-
+        </h1>
         <form>
           <div class="mb-4">
             <label for="fullname" class="block mb-1 font-medium"
