--- a/auctions.html
+++ b/auctions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <script type="module" src="js/components/nav/hamburgermenu.js"></script>
+    <script type="module" src="js/main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -55,10 +55,10 @@
         <!-- Item 1 -->
         <div class="grid mb-10">
           <div class="grid border border-gray-200 rounded-md overflow-hidden">
-            <div class="">
+            <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
               <img
-                src="images/canis.jpg"
-                alt="Dog figurine"
+                src="images/Firefly A colorful, simplistic painting of planet Earth engulfed in bright orange and red flames, dr.jpg"
+                alt="an abandoned street at night in a small french town 19th century town, a coated figure stand"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -79,10 +79,10 @@
         <!-- Item 2 -->
         <div class="grid mb-10">
           <div class="grid border border-gray-200 rounded-md overflow-hidden">
-            <div class="">
+            <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
               <img
-                src="images/canis.jpg"
-                alt="Dog figurine"
+                src="images/clockowl.jpg"
+                alt="an abandoned street at night in a small french town 19th century town, a coated figure stand"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -103,10 +103,10 @@
         <!-- Item 3 -->
         <div class="grid mb-10">
           <div class="grid border border-gray-200 rounded-md overflow-hidden">
-            <div class="">
+            <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
               <img
-                src="images/canis.jpg"
-                alt="Dog figurine"
+                src="images/Firefly Fancy swiss clock with steel chain; 86681.jpg"
+                alt="an abandoned street at night in a small french town 19th century town, a coated figure stand"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -124,6 +124,12 @@
             </div>
           </div>
         </div>
+      </section>
+      <section>
+        <h2 class="col-span-full">Auctions - API</h2>
+        <div
+          class="m-12 grid sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 api-container"
+        ></div>
       </section>
     </main>
     <footer class="text-white py-6 text-center">
