--- a/auctions.html
+++ b/auctions.html
@@ -38,95 +38,17 @@
         ☰
       </button>
     </header>
-
-    <main class="container mx-auto px-4 py-8">
-      <section
-        class="m-12 grid sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4"
-      >
-        <div class="grid grid-flow-col grid-cols-[1fr_15fr] col-span-full mb-4">
-          <label for="searchbar" class="mb-1 mr-4 font-medium">Search</label>
-          <input
-            type="text"
-            id="searchbar"
-            class="border border-gray-300 rounded-md cols-span focus:outline-none focus:ring-1 focus:ring-[var(--emerald-green)]"
-          />
-        </div>
-        <h1 class="col-span-full">Auctions in progress</h1>
-        <!-- Item 1 -->
-        <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
-            <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
-              <img
-                src="images/Firefly A colorful, simplistic painting of planet Earth engulfed in bright orange and red flames, dr.jpg"
-                alt="an abandoned street at night in a small french town 19th century town, a coated figure stand"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div class="p-4 grid grid-cols-2 font-extralight">
-              <div class="border-r">
-                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
-                <p class="text-gray-600">Alistair Vennholm</p>
-              </div>
-              <div class="grid justify-items-end text-end">
-                <p class="text-sm">Current price</p>
-                <p class="text-2xl">$123</p>
-                <p class="text-sm font-semibold text-gray-300">2 days left</p>
-              </div>
-              <button class="btn btn-secondary col-span-full mt-10">Bid</button>
-            </div>
-          </div>
-        </div>
-        <!-- Item 2 -->
-        <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
-            <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
-              <img
-                src="images/clockowl.jpg"
-                alt="an abandoned street at night in a small french town 19th century town, a coated figure stand"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div class="p-4 grid grid-cols-2 font-extralight">
-              <div class="border-r">
-                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
-                <p class="text-gray-600">Alistair Vennholm</p>
-              </div>
-              <div class="grid justify-items-end text-end">
-                <p class="text-sm">Current price</p>
-                <p class="text-2xl">$123</p>
-                <p class="text-sm font-semibold text-gray-300">2 days left</p>
-              </div>
-              <button class="btn btn-secondary col-span-full mt-10">Bid</button>
-            </div>
-          </div>
-        </div>
-        <!-- Item 3 -->
-        <div class="grid mb-10">
-          <div class="grid border border-gray-200 rounded-md overflow-hidden">
-            <div class="w-full h-64 sm:h-72 md:h-80 lg:h-96 object-cover">
-              <img
-                src="images/Firefly Fancy swiss clock with steel chain; 86681.jpg"
-                alt="an abandoned street at night in a small french town 19th century town, a coated figure stand"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div class="p-4 grid grid-cols-2 font-extralight">
-              <div class="border-r">
-                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
-                <p class="text-gray-600">Alistair Vennholm</p>
-              </div>
-              <div class="grid justify-items-end text-end">
-                <p class="text-sm">Current price</p>
-                <p class="text-2xl">$123</p>
-                <p class="text-sm font-semibold text-gray-300">2 days left</p>
-              </div>
-              <button class="btn btn-secondary col-span-full mt-10">Bid</button>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <h2 class="col-span-full">Auctions - API</h2>
+    <main>
+      <div class="bg-gray-400 p-8">
+        <label for="searchbar" class="mb-1 mr-4 font-medium">Search</label>
+        <input
+          type="text"
+          id="searchbar"
+          class="border border-gray-300 rounded-md cols-span focus:outline-none focus:ring-1 focus:ring-[var(--emerald-green)]"
+        />
+      </div>
+      <section class="container mx-auto px-4 py-8">
+        <h1 class="col-span-full">Auctions - API</h1>
         <div
           class="m-12 grid sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 api-container"
         ></div>
