--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <script type="module" src="js/components/nav/hamburgermenu.js"></script>
+    <script type="module" src="js/register.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,7 +38,6 @@
         ☰
       </button>
     </header>
-
     <main class="flex justify-center items-center min-h-[calc(100vh-180px)]">
       <div class="max-w-md w-full border border-gray-200 rounded-md p-8 m-4">
         <h1 class="text-2xl font-semibold text-center mb-6">
@@ -90,8 +89,7 @@
               required
             />
           </div>
-
-          <button type="submit" class="btn btn-primary w-full">
+          <button type="submit" id="form-button" class="btn btn-primary w-full">
             Create Account
           </button>
         </form>
@@ -105,6 +103,7 @@
           >
         </p>
       </div>
+      <section id="loaded-html"></section>
     </main>
 
     <footer class="text-white py-6 text-center">
