--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/components/nav/navLogin.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,14 +23,7 @@
       <nav
         role="navigation"
         class="hidden nav-header nav-header-hamburger gap-10"
-      >
-        <a href="index.html">home</a>
-        <a href="auctions.html">auctions</a>
-        <a href="about.html">about</a>
-        <a href="login.html">login</a>
-        <a href="contact.html">logout</a>
-        <a href="profile.html">profile</a>
-      </nav>
+      ></nav>
       <button
         id="hamburger-btn"
         class="md:hidden text-2xl ml-4 focus:outline-none"
