--- a/register.html
+++ b/register.html
@@ -23,14 +23,7 @@
       <nav
         role="navigation"
         class="hidden nav-header nav-header-hamburger gap-10"
-      >
-        <a href="index.html">home</a>
-        <a href="auctions.html">auctions</a>
-        <a href="about.html">about</a>
-        <a href="login.html">login</a>
-        <a href="contact.html">logout</a>
-        <a href="profile.html">profile</a>
-      </nav>
+      ></nav>
       <button
         id="hamburger-btn"
         class="md:hidden text-2xl ml-4 focus:outline-none"
