--- a/auctions.html
+++ b/auctions.html
@@ -36,7 +36,7 @@
         <label for="searchbar" class="mb-1 mr-4 font-medium">Search</label>
         <input
           type="text"
-          id="searchbar"
+          id="search-bar"
           class="border border-gray-300 rounded-md cols-span focus:outline-none focus:ring-1 focus:ring-[var(--emerald-green)]"
         />
       </div>
