--- a/auctions.html
+++ b/auctions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/auctions.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -61,6 +61,9 @@
         <div
           class="m-12 grid sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 api-container"
         ></div>
+        <button id="loadmorebutton" class="btn btn-primary w-full">
+          Load more
+        </button>
       </section>
     </main>
     <footer class="text-white py-6 text-center">
