--- a/index.html
+++ b/index.html
@@ -48,83 +48,12 @@
         </div>
       </section>
 
-      <section
-        class="m-12 grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
-      >
-        <h1 class="font-bold">Welcome to Nexus</h1>
-        <h2 class="col-span-full">Auctions in progress</h2>
-        <!-- Item 1 -->
-        <div class="grid mb-10">
-          <div class="cards rounded-md overflow-hidden">
-            <div class="">
-              <img
-                src="images/canis.jpg"
-                alt="Dog figurine"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div class="p-4 grid grid-cols-2 font-extralight">
-              <div class="border-r">
-                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
-                <p class="text-gray-600">Alistair Vennholm</p>
-              </div>
-              <div class="grid justify-items-end text-end">
-                <p class="text-sm">Current price</p>
-                <p class="text-2xl">$123</p>
-                <p class="text-sm font-semibold text-gray-300">2 days left</p>
-              </div>
-              <button class="btn btn-secondary col-span-full mt-10">Bid</button>
-            </div>
-          </div>
-        </div>
-        <!-- Item 2 -->
-        <div class="grid mb-10">
-          <div class="grid cards rounded-md overflow-hidden">
-            <div class="">
-              <img
-                src="images/canis.jpg"
-                alt="Dog figurine"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div class="p-4 grid grid-cols-2 font-extralight">
-              <div class="border-r">
-                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
-                <p class="text-gray-600">Alistair Vennholm</p>
-              </div>
-              <div class="grid justify-items-end text-end">
-                <p class="text-sm">Current price</p>
-                <p class="text-2xl">$123</p>
-                <p class="text-sm font-semibold text-gray-300">2 days left</p>
-              </div>
-              <button class="btn btn-secondary col-span-full mt-10">Bid</button>
-            </div>
-          </div>
-        </div>
-        <!-- Item 3 -->
-        <div class="grid mb-10">
-          <div class="grid cards rounded-md overflow-hidden">
-            <div class="">
-              <img
-                src="images/canis.jpg"
-                alt="Dog figurine"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div class="p-4 grid grid-cols-2 font-extralight">
-              <div class="border-r">
-                <h3 class="font-bold border-b w-[90%]">Φ: Canis</h3>
-                <p class="text-gray-600">Alistair Vennholm</p>
-              </div>
-              <div class="grid justify-items-end text-end">
-                <p class="text-sm">Current price</p>
-                <p class="text-2xl">$123</p>
-                <p class="text-sm font-semibold text-gray-300">2 days left</p>
-              </div>
-              <button class="btn btn-secondary col-span-full mt-10">Bid</button>
-            </div>
-          </div>
-        </div>
+      <section class="container mx-auto px-4 py-8">
+        <h1 class="col-span-full">Welcome to Nexus</h1>
+        <h2 class="col-span-full">Auctions ending soon</h2>
+        <div
+          class="m-12 grid sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 api-container"
+        ></div>
       </section>
       <section
         class="m-12 grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
