--- a/profile.html
+++ b/profile.html
@@ -36,6 +36,8 @@
       class="flex flex-col items-center justify-start py-8 px-4 min-h-[calc(100vh-180px)]"
     >
       <section class="loaded-profile max-w-md w-full"></section>
+      <h2>Your listed items</h2>
+      <div class="api-container"></div>
     </main>
 
     <footer class="text-white py-6 text-center">
