--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
       ></nav>
       <button
         id="hamburger-btn"
-        class="lg:hidden text-2xl ml-4 focus:outline-none"
+        class="lg:hidden text-2xl ml-4 focus:outline-none text-white"
       >
         ☰
       </button>
