--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <section
         class="h-72 bg-cover bg-center flex text-white text-2xl"
-        style="background-image: url(&quot;images/HeroBanner.jpg&quot;)"
+        style="background-image: url(&quot;images/herobanner.jpg&quot;)"
       >
         <div>
           <p class="text-7xl font-thin m-5 w-96">Auctions worth your time</p>
