--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="flex items-center justify-between px-6 py-4 w-full">
       <a href="index.html">
-        <img src="images/nexus.svg" class="h-12" />
+        <img src="images/nexus.svg" class="h-12" alt="Nexus-logo" />
       </a>
       <nav
         role="navigation"
