changed section to div to improve semantics

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     </header>
 
     <main>
-      <section
+      <div
         class="h-72 bg-cover bg-center flex text-white text-2xl"
         style="background-image: url(&quot;images/herobanner.jpg&quot;)"
       >
         <div>
           <p class="text-7xl font-thin m-5 w-96">Auctions worth your time</p>
         </div>
-      </section>
+      </div>
 
       <section class="container mx-auto px-4 py-8">
         <h1 class="col-span-full">Welcome to Nexus</h1>
