--- a/auctions.html
+++ b/auctions.html
@@ -18,7 +18,7 @@
   <body>
     <header class="flex items-center justify-between px-6 py-4 w-full">
       <a href="index.html">
-        <img src="images/nexus.svg" class="h-12" alt="Nexus-logo" />
+        <img src="images/nexus.svg" class="h-12" />
       </a>
       <nav
         role="navigation"
@@ -32,7 +32,7 @@
       </button>
     </header>
     <main>
-      <section
+      <div
         class="filter-bar bg-gray-400 p-8 gap-6 flex flex-col sm:flex-row flex-wrap items-stretch font-medium"
       >
         <div
@@ -77,7 +77,7 @@
             <option value="inactive">ended listings</option>
           </select>
         </div>
-      </section>
+      </div>
       <section class="container mx-auto px-4 py-8">
         <h1 class="col-span-full">Auctions</h1>
         <div
